--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,7 +1,12 @@
+.hammer {
+  width: 100%;
+  padding: 0 0 0 50%;
+}
+
 .footer {
   display: flex;
   align-items: center;
   justify-content: center;
-  
+  background: black;
 	height: $baseUnit * 10;
 }
