--- a/source/stylesheets/components/story/_item.scss
+++ b/source/stylesheets/components/story/_item.scss
@@ -2,11 +2,12 @@
 	display: flex;
 	align-items: flex-end;
 	flex-wrap: wrap;
-	margin: 0 0 ($baseUnit * 10) 0;
+	margin: 0 0 $baseUnit * 5 0;
 	@include clearfix;
 }
 
 .item-header {
+	align-items: center;
 	min-height: calc(100vh - #{rem-calc(30)} - #{$halfUnit});
 }
 
