--- a/source/stylesheets/global/_layout.scss
+++ b/source/stylesheets/global/_layout.scss
@@ -7,7 +7,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100%;
-  background: $lightBaseColor;
+  background: $yellow;
 }
 
 .main {
