--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -11,7 +11,7 @@
   position: relative;
   left: $thirdUnit / 2;
   padding-right: $baseUnit - ($thirdUnit / 2);
-  border-right: $thirdUnit solid black;
+  border-right: $thirdUnit solid $yellow;
 }
 
 .reference-line {
