--- a/source/layouts/story.erb
+++ b/source/layouts/story.erb
@@ -1,5 +1,5 @@
 <%= partial "partials/head" %>
-<%= partial("partials/navigation", :locals => { :which_is_link_active => '0' }) %>
+<%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
 <main class="main story">
   <%= yield %>
 </main>
