--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,8 +15,12 @@ layout: story
     </div>
   </div>
   <div class="column-right">
-    <img class="cog1" src="images/cog1.svg" alt="">
+    <img class="hammer-header" src="./images/logo-short.svg" alt="">
   </div>
+</div>
+
+<div id="item-video" class="item item-video">
+  <div class="block block-video"></div>
 </div>
 
 <% for item in 2..4 %>
@@ -79,4 +83,4 @@ layout: story
   </div> -->
 </div>
 
-<img class="hammer" src="./images/logo.svg" alt="">
+<img class="hammer" src="./images/logo-short.svg" alt="">
