--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -9,20 +9,11 @@
 
 .reference {
   position: relative;
-  left: $thirdUnit / 2;
+  left: $baseUnit;
   padding-right: $baseUnit - ($thirdUnit / 2);
-  border-right: $thirdUnit solid $yellow;
+  border-right: $thirdUnit solid $black;
 }
 
-.reference-line {
-  position: absolute;
-  top: $halfUnit;
-  right: -$baseUnit;
-
-  width: calc(#{$baseUnit} + 1px);
-  height: 100%;
-
-  border-left: 2px solid $black;
-
-  z-index: -10;
+.reference:hover {
+  background: $yellow;
 }
