--- a/source/stylesheets/global/_layout.scss
+++ b/source/stylesheets/global/_layout.scss
@@ -7,7 +7,8 @@ body {
   flex-direction: column;
   justify-content: space-between;
   min-height: 100%;
-  background: $yellow;
+  background: $lightgray;
+  
 }
 
 .main {
