--- a/source/stylesheets/components/story/_reference.scss
+++ b/source/stylesheets/components/story/_reference.scss
@@ -11,7 +11,16 @@
   position: relative;
   left: $baseUnit;
   padding-right: $baseUnit - ($thirdUnit / 2);
+  
   border-right: $thirdUnit solid $black;
+  // border-left: $thirdUnit solid $black;
+
+  background: $yellow;
+}
+
+.reference p {
+  padding: $thirdUnit 0;
+  // margin-bottom: $thirdUnit;
 }
 
 .reference:hover {
