add icons and other styling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -84,4 +84,5 @@ layout: story
   </div> -->
 </div>
 
+<!-- <img class="flower" src="./images/flower.png" alt=""> -->
 <img class="hammer" src="./images/logo-short.svg" alt="">
