--- a/source/stylesheets/components/_footer.scss
+++ b/source/stylesheets/components/_footer.scss
@@ -1,3 +1,10 @@
+.flower {
+  position: absolute;
+  bottom: 0;
+  width: 10%;
+  transform: scaleX(-1);
+}
+
 .hammer {
   width: 100%;
   padding: 0% 0 0 75%;
