--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,7 +20,9 @@ layout: story
 </div>
 
 <div id="item-video" class="item item-video">
-  <div class="block block-video"></div>
+  <div class="block block-video">
+    <img class="playbutton" src="./images/playbutton.svg" alt="">
+  </div>
 </div>
 
 <% for item in 2..4 %>
@@ -67,6 +69,9 @@ layout: story
       <h1 class="title textbar"><%= blog('blocks').articles[14].data.title %></h1>
       <div class="block-small-typography"><%= blog('blocks').articles[14].body %></div>
     </div>
+  </div>
+  <div class="column-right">
+    <img class="hammer-about" src="./images/logo-short.svg" alt="">
   </div> 
   <!--<div class="block about-contents">
     <div class="about-contents-ul left">
@@ -83,6 +88,3 @@ layout: story
     <div>
   </div> -->
 </div>
-
-<!-- <img class="flower" src="./images/flower.png" alt=""> -->
-<img class="hammer" src="./images/logo-short.svg" alt="">
