made nav links relative

--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -10,41 +10,41 @@
     
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 2 %>
-    <li><% link_to('/#item-body-2', {:class => 'nav-link is-link-active'}) do %> From Content to Context <% end %></li>
+    <li><% link_to('#item-body-2', {:class => 'nav-link is-link-active'}) do %> From Content to Context <% end %></li>
     <% else %>
-    <li><% link_to('/#item-body-2', {:class => 'nav-link'}) do %> From Content to Context <% end %></li>
+    <li><% link_to('#item-body-2', {:class => 'nav-link'}) do %> From Content to Context <% end %></li>
     <% end %>
     <% end %>
 
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 3 %>
-    <li><% link_to('/#item-body-3', {:class => 'nav-link is-link-active'}) do %> To Curation <% end %></li>
+    <li><% link_to('#item-body-3', {:class => 'nav-link is-link-active'}) do %> To Curation <% end %></li>
     <% else %>
-    <li><% link_to('/#item-body-3', {:class => 'nav-link'}) do %> To Curation <% end %></li>
+    <li><% link_to('#item-body-3', {:class => 'nav-link'}) do %> To Curation <% end %></li>
     <% end %>
     <% end %>
 
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 4 %>
-    <li><% link_to('/#item-body-4', {:class => 'nav-link is-link-active'}) do %> To Faciliation <% end %></li>
+    <li><% link_to('#item-body-4', {:class => 'nav-link is-link-active'}) do %> To Faciliation <% end %></li>
     <% else %>
-    <li><% link_to('/#item-body-4', {:class => 'nav-link'}) do %> To Faciliation <% end %></li>
+    <li><% link_to('#item-body-4', {:class => 'nav-link'}) do %> To Faciliation <% end %></li>
     <% end %>
     <% end %>
 
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 5 %>
-    <li><% link_to('/#item-partners', {:class => 'nav-link is-link-active'}) do %> Partners <% end %></li>
+    <li><% link_to('#item-partners', {:class => 'nav-link is-link-active'}) do %> Partners <% end %></li>
     <% else %>
-    <li><% link_to('/#item-partners', {:class => 'nav-link'}) do %> Partners <% end %></li>
+    <li><% link_to('#item-partners', {:class => 'nav-link'}) do %> Partners <% end %></li>
     <% end %>
     <% end %>
 
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 6 %>
-    <li><% link_to('/#item-about', {:class => 'nav-link is-link-active'}) do %> About <% end %></li>
+    <li><% link_to('#item-about', {:class => 'nav-link is-link-active'}) do %> About <% end %></li>
     <% else %>
-    <li><% link_to('/#item-about', {:class => 'nav-link'}) do %> About <% end %></li>
+    <li><% link_to('#item-about', {:class => 'nav-link'}) do %> About <% end %></li>
     <% end %>
     <% end %>
   </ul>
