--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -39,10 +39,10 @@
   padding: $baseUnit 0;
 }
 
-.classrooms {
+.item-body-image {
   width: 100%;
   background: $yellow;
-  padding: $baseUnit*3 $baseUnit*3;
+  padding: $baseUnit*3 $baseUnit;
 }
 
 .group-yellow-black {
