--- a/source/stylesheets/components/_nav.scss
+++ b/source/stylesheets/components/_nav.scss
@@ -2,6 +2,8 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+  width: 100%;
+  overflow: hidden;
   padding: $halfUnit $baseUnit;
   background: $yellow;
   border-top: $thirdUnit dashed black;
@@ -15,6 +17,9 @@
 .nav-story li {
   flex-shrink: 0;
   margin: 0 $thirdUnit 0 0;
+}
+
+.nav-story .hide-responsive {
   @media (max-width: 800px){
     display: none;
   }
