add new content and fix links

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,6 +19,9 @@ layout: story
   </div>
 </div>
 
+<div>
+<h1><%= config.http_prefix %></h1>
+</div>
 <div id="item-video" class="item item-video">
   <div class="block block-video">
     <img class="playbutton" src="./images/playbutton.svg" alt="">
