--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,5 +1,5 @@
 <div class="reference">
-  <a href="<%= (defined? reference.type) ? reference.type : reference.data.type %>/<%= (defined? reference.slug) ? reference.slug : 'nooo' %>.html">
-    <p><%= (defined? reference.data) ? reference.data.title : reference.slug %></p>
+  <a href="<%= config.http_prefix + reference.type + '/' + reference.slug + '.html'%>">
+    <p><%= reference.slug %></p>
   </a>
 </div> 
