small styling refactors

--- a/source/article.html.erb
+++ b/source/article.html.erb
@@ -46,7 +46,7 @@ layout: story
 
 <a id="item-partners"></a>
 <%= partial("partials/navigation", :locals => { :which_is_link_active => 5 }) %>
-<img class="item-partners-image" src="images/item-partners.svg" alt="">
+<img class="group-yellow-black" src="images/groupyellowblack.png" alt="">
 <div  class="item item-partners">
   <div class="column-left">
     <div class="<%= blog('blocks').articles[13].data.classes %>">
@@ -73,4 +73,5 @@ layout: story
   <div class="column-right">
     <img class="hammer-about" src="./images/logo-short.svg" alt="">
   </div> 
+  
 </div>
