--- a/source/stylesheets/components/story/_entity.scss
+++ b/source/stylesheets/components/story/_entity.scss
@@ -9,7 +9,7 @@
 }
 
 .entity, .entity p {
-  @media (min-width: 800px){
+  @media (min-width: $breakpoint-md){
     font-size: rem-calc(10); //16
     line-height: rem-calc(12); //20
   }
