--- a/source/stylesheets/global/_mediaqueries.scss
+++ b/source/stylesheets/global/_mediaqueries.scss
@@ -1,60 +1,35 @@
-@media (min-width: 400px){
+$breakpoint-xs : 400px;
+$breakpoint-sm : 600px;
+$breakpoint-md : 800px;
+$breakpoint-lg : 1000px;
+$breakpoint-xl : 1200px;
+
+@media (min-width: $breakpoint-xs){
   html {
     font-size: 12px;
   }
 }
 
-@media (min-width: 600px){
+@media (min-width: $breakpoint-sm){
   html {
     font-size: 18px;
   }
 }
 
-@media (min-width: 800px){
+@media (min-width: $breakpoint-md){
   html {
     font-size: 20px;
   }
 }
 
-@media (min-width: 1000px){
+@media (min-width: $breakpoint-lg){
   html {
     font-size: 22px;
   }
 }
 
-@media (min-width: 1200px){
+@media (min-width: $breakpoint-xl){
   html {
     font-size: 24px;
   }
 }
-
-// @media (min-height: 600px) and (min-width: 1024px){
-//   html {
-//     font-size: 10px;
-//   }
-// }
-
-// @media (min-height: 700px) and (min-width: 1120px){
-//   html {
-//     font-size: 12px;
-//   }
-// }
-
-// @media (min-height: 800px) and (min-width: 1210px){
-//   html {
-//     font-size: 13px;
-//   }
-// }
-
-// @media (min-height: 900px) and (min-width: 1310px){
-//   html {
-//     font-size: 14px;
-//   }
-// }
-
-// @media (min-height: 1080px) and (min-width: 1500px) {
-//   html {
-//     font-size: 16px;
-//   }
-// }
-
