--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -11,24 +11,21 @@
   margin-bottom: $halfUnit;
 }
 
-
 // Specific block-lvl styling
 .item-header .block {
   padding: $baseUnit;
 }
 
-.item-header .main-logo {
-  @media (max-width: $breakpoint-sm) {
-    font-size: rem-calc(40);
-  }
-}
-
 .item-header .hammer-header {
   position: relative;
-  width: 65%;
-  left: 50%;
+  width: 26%;
+  left: 80%;
   transform: rotate(45deg);
   padding: $baseUnit 0;
+  @media (min-width: $breakpoint-lg) {
+    width: 65%;
+    left: 50%;
+  }
 }
 
 .item-video .block-video {
@@ -67,7 +64,11 @@
 .item-about .hammer-about {
   position: relative;
   top: 2px;
-  left: 35%;
-  width: 65%;
+  left: 74%;
+  width: 26%;
   padding: $baseUnit*5 0 0 0;
+  @media (min-width: $breakpoint-lg) {
+    width: 65%;
+    left: 35%;
+  }
 }
