--- a/source/stylesheets/global/partials/_textbar.scss
+++ b/source/stylesheets/global/partials/_textbar.scss
@@ -20,6 +20,11 @@
   font-size: rem-calc(73.3333);
   line-height: rem-calc(100);
   padding: 0 ($thirdUnit * 2);
+  @media (max-width: $breakpoint-sm) {
+    padding: 0 ($thirdUnit * 2);
+    font-size: rem-calc(68);
+    line-height: rem-calc(80);
+  }
 }
 
 .textbar-big.textbar-inverse {
