small styling changes

--- a/source/partials/_story-entity.erb
+++ b/source/partials/_story-entity.erb
@@ -1,5 +1,5 @@
 <div class="entity">
-  <a href="<%= entity.url || 'https://www.google.nl/#q=' + entity.name %>">
+  <a href="<%= entity.url || 'https://www.linkedin.com/vsearch/f?type=all&keywords=' + entity.name %>">
     <h3><%= entity.name %></h3>
     <p><%= entity.job %></p>
   </a>
