--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,5 +1,7 @@
-<div class="reference">
-  <a href="<%= config.http_prefix + reference.type + '/' + reference.slug + '.html'%>">
-    <p><%= reference.slug %></p>
-  </a>
+<div class="reference-inner-container">
+  <div class="reference">
+    <a href="<%= config.http_prefix + reference.type + '/' + reference.slug + '.html'%>">
+      <p><%= reference.slug %></p>
+    </a>
+  </div>
 </div> 
