--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -8,13 +8,13 @@
   <div class="reference-container">
     <% if block.data.references %>
     <div class="reference-line"></div>
-    <h3>Activities:</h3>
+    <h3>Projects:</h3>
     <% for reference in block.data.references %>
     <% if reference.type == "page" %>
       <%= partial(:"partials/story-reference", :locals => { :reference => reference })  %>
     <% end %>
     <% end %>
-    <h3>Articles:</h3>
+    <h3>Publications:</h3>
     <% for reference in block.data.references %>
     <% if reference.type == "article" %>
       <%= partial(:"partials/story-reference", :locals => { :reference => reference })  %>
