--- a/source/stylesheets/components/story/_block.scss
+++ b/source/stylesheets/components/story/_block.scss
@@ -53,7 +53,10 @@
   width: 100%;
   heigth: auto;
   background: $yellow;
-  padding: $baseUnit*3;
+  padding: $baseUnit;
+  @media (min-width: $breakpoint-lg) {
+    padding: $baseUnit*3;
+  }
 }
 
 .item-partners .block {
