--- a/source/partials/_navigation.erb
+++ b/source/partials/_navigation.erb
@@ -1,5 +1,5 @@
 <nav>
-  <ul class="nav-story">
+  <ul class="nav-main">
     <% if defined?which_is_link_active %>
     <% if which_is_link_active == 1 %>
     <li><% link_to(config.http_prefix + '#', {:class => 'nav-link is-link-active'}) do %> <img src="images/cth-icon.svg" class="cth-icon" alt=""> <% end %></li>
