--- a/source/projects.html.erb
+++ b/source/projects.html.erb
@@ -1,6 +1,7 @@
 ---
 title: Coding the Humanities
-layout: story
+layout: main
+type: projects
 ---
 
 <div id="item-header" class="item item-header">
