--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,7 +3,7 @@ title: Coding the Humanities
 layout: main
 type: story
 ---
-
+<%= partial("partials/navigation", :locals => { :which_is_link_active => 1 }) %>
 <div id="item-header" class="item item-header">
   <div class="column-left">
     <div class="<%= blog('blocks').articles[0].data.classes %>">
