--- a/source/partials/_story-block.erb
+++ b/source/partials/_story-block.erb
@@ -1,4 +1,4 @@
-<div class="<%= block.data.classes %>">
+<div class="block <%= block.data.classes %>">
   <% if block.data.block == 1 %>
   <h1 class="textbar title"><%= block.title %></h1>
   <% elsif %>
