--- a/source/partials/_story-reference.erb
+++ b/source/partials/_story-reference.erb
@@ -1,6 +1,6 @@
 <div class="reference-inner-container">
   <div class="reference">
-    <a href="<%= config.http_prefix + reference.type + '/' + reference.slug + '.html'%>">
+    <a href="<%= config.http_prefix + reference.type + '.html#' + reference.slug %>">
       <p><%= reference.slug %></p>
     </a>
   </div>
